Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12711

backup may show corruption with custom innodb_data_file_path

    XMLWordPrintable

Details

    Description

      E.g. backup of initial database in 10.1.23 with
      innodb-data-file-path=ibdata1:10M;ibdata2:5M:autoextend

      is showing corruption :

      170506 09:06:04 [01] Copying ./ibdata1 to /dev/shm/__var0/var1/backup/full/ibdata1
      170506 09:06:05 [01]        ...done
      170506 09:06:05 [01] Copying ./ibdata2 to /dev/shm/__var0/var1/backup/full/ibdata2
      InnoDB: Checksum fields zero but page is not empty.
      [01] xtrabackup: Database page corruption detected at page 0, retrying...
      InnoDB: Checksum fields zero but page is not empty.
      [01] xtrabackup: Database page corruption detected at page 0, retrying...
      

      Full output:

      bash: ===> 10.1.23/bin/mariabackup --defaults-file=/dev/shm/__var0/var1/my.cnf --backup --target-dir=/dev/shm/__var0/var1/backup/
      170506 09:13:48 Connecting to MySQL server host: localhost, user: root, password: not set, port: not set, socket: /dev/shm/__var0/tmp/mysql.sock.X8lno8
      Using server version 10.1.23-MariaDB
      10.1.23/bin/mariabackup based on MariaDB server 10.1.23-MariaDB Linux (x86_64) 
      xtrabackup: uses posix_fadvise().
      xtrabackup: cd to /dev/shm/__var0/var1/data
      xtrabackup: open files limit requested 0, set to 1024
      xtrabackup: using the following InnoDB configuration:
      xtrabackup:   innodb_data_home_dir = ./
      xtrabackup:   innodb_data_file_path = ibdata1:10M;ibdata2:5M:autoextend
      xtrabackup:   innodb_log_group_home_dir = ./
      xtrabackup:   innodb_log_files_in_group = 2
      xtrabackup:   innodb_log_file_size = 50331648
      170506 09:13:48 >> log scanned up to (1616829)
      xtrabackup: Generating a list of tablespaces
      170506 09:13:49 [01] Copying ./ibdata1 to /dev/shm/__var0/var1/backup/ibdata1
      170506 09:13:49 [01]        ...done
      170506 09:13:49 [01] Copying ./ibdata2 to /dev/shm/__var0/var1/backup/ibdata2
      InnoDB: Checksum fields zero but page is not empty.
      [01] xtrabackup: Database page corruption detected at page 0, retrying...
      InnoDB: Checksum fields zero but page is not empty.
      [01] xtrabackup: Database page corruption detected at page 0, retrying...
      InnoDB: Checksum fields zero but page is not empty.
      [01] xtrabackup: Database page corruption detected at page 0, retrying...
      InnoDB: Checksum fields zero but page is not empty.
      [01] xtrabackup: Database page corruption detected at page 0, retrying...
      InnoDB: Checksum fields zero but page is not empty.
      [01] xtrabackup: Database page corruption detected at page 0, retrying...
      InnoDB: Checksum fields zero but page is not empty.
      [01] xtrabackup: Database page corruption detected at page 0, retrying...
      InnoDB: Checksum fields zero but page is not empty.
      [01] xtrabackup: Database page corruption detected at page 0, retrying...
      InnoDB: Checksum fields zero but page is not empty.
      [01] xtrabackup: Database page corruption detected at page 0, retrying...
      170506 09:13:49 >> log scanned up to (1616829)
      InnoDB: Checksum fields zero but page is not empty.
      [01] xtrabackup: Database page corruption detected at page 0, retrying...
      InnoDB: Checksum fields zero but page is not empty.
      [01] xtrabackup: Error: failed to read page after 10 retries. File ./ibdata2 seems to be corrupted.
      [01] xtrabackup: Error: xtrabackup_copy_datafile() failed.
      [01] xtrabackup: Error: failed to copy datafile.
      2017-05-06 09:13:49: bash: ===> mariabackup failed with exit code 1
      

      Attachments

        1. __var0.zip
          717 kB
        2. dbfiles.tgz
          653 kB

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              anikitin Andrii Nikitin (Inactive)
              Votes:
              2 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 1h
                  1d 1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.